# agent-voice-mcp

./: LICENSE  README.md  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: auto-add-to-project.yml  auto-approve.yml  ci.yml
